--- a/css/desktop/section3.css
+++ b/css/desktop/section3.css
@@ -8,28 +8,29 @@
 }
 .section3_flex {
     padding: 0;
-    width: 100%;
+/*    width: 100%;*/
     height: 520px;
     display: flex;
     justify-content: flex-start;
-    align-items: stretch;
-    flex-wrap: nowrap;
+/*    align-items: stretch;**/
+/*    flex-wrap: nowrap;*/
     padding-top: 14px;
     margin-left: 159px;
+    margin-right: 50px;
 }
-.carousel {
-    display: none;
-}
+ 
 .section3_box {
+    display: block;
     padding: 0;
     height: 100%;
     display: flex;
     flex-direction: column;
     text-align: center;
 }
-
+.section3_flex:nth-child(3) {
+    width: 0;
+}
 .section3_h1 {
-    font-family: Circe ;
     font-weight: bold;
     font-size: 42px;
     text-transform: uppercase;
@@ -38,7 +39,7 @@
     padding-top: 4px;    
     padding-left: 3px;
 }
-.section3_h1 > br {
+.section3_h1 > br, .section3_radiobox {
     display: none;
 }
 
@@ -74,7 +75,6 @@
 .section3_p {
     margin: 0 50px ;
     font-size: 18px;
-    font-family: "Circe";
     color: rgb(36, 36, 36);
     line-height: 1.15;
     letter-spacing: 1px;
@@ -108,8 +108,4 @@
 .section3_box3 > p {
     padding-top: 40px;
     padding-left: 30px;
-}
-.section3_radio {
-    height: 0;
-    display: none;
 }
