--- a/css/mobile/m_footer.css
+++ b/css/mobile/m_footer.css
@@ -1,6 +1,19 @@
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 767px) {
   footer {  
-    width: 370px;
-    margin-top: -34px;
+    width: 100%;
+    margin-top: -7.6vw;
   }
+  .footer_h4 {
+    font-size: 2.7vw;
+  } 
+}
+
+@media screen and (min-width: 400px) and (max-width: 767px) {
+    footer {
+        margin-top: -36px;
+    }
+
+    .footer_h4 {
+        font-size: 12px;
+    }
 }
