--- a/css/mobile/m_section5.css
+++ b/css/mobile/m_section5.css
@@ -1,54 +1,170 @@
-@media screen and (max-width: 600px) {
-   .section5 {
-       height: 492px;
-       width: 370px;
+@media screen and (max-width: 1023px) {
+  .section5 {
+    height: 133vw;
   }
-  .section5_box1, .section5_h1, .section5_box1_msg, .section5_box {
-    padding: 0 0 0 0;
+  .section5_flex {
     width: 100%;
-  }   
-  .section5_h1 {
-      padding-top: 45px;
+    height: 72vw;
+    margin-top: 6.5%;
   }
-  .section5_h1 > p {
-      font-size: 30px;
-  }
-
-  .section5_box1 {  
-      padding-top: 24px;
-      padding-left: 27px;
-  }
-
-  .section5_box1_msg > img {
-      width: 318px;
-      height: 160px;
-  }
-  .section5_box1_msg > p > br {
+  .section5_radiobox {
     display: block;
   }
-  .section5_box1_msg > p {
-      padding-left: 20px;
-      padding-top: 20px;
-      font-size: 14px;
-      line-height: 1.2;
-      letter-spacing: 0px;
+  .section5_h1 {
+    padding-top: 12.2vw;
   }
-  .section5_box1_img p {
-    padding-left: 143px;
-    padding-top: 25px;
+  .section5_h1 > p {
+    font-size: 8vw;
   }
-  .section5_box1_img .p1 {
-    padding-left: 143px;
-    padding-top: 15px;
-    font-size: 5px;
+  .section5_box {
+/*    padding: 0;
+    width: 86.5%;
+    height: 100%;
+    margin: 0 auto;*/
+    display: none;      
+    transition: opacity 700ms;
+    opacity: 0;
+
+  }
+  .section5_box1 {  
+    display: block;     
+    opacity: 1;
+  }
+  .section5_radiobox {
+    margin-top: 6.2vw;
+    text-align: center;
+
+  }
+
+  .section5_radio {
+    background: rgb(234, 234, 234);
+    cursor: pointer;
+    line-height: 18px;
+    border: none;
+  }
+
+  .section5_box_msg, .section5_box_msg > img {
+    width: 100%;
+  }
+
+  .section5_box_msg > p {
+    width: 88.5%;
+    padding: 4vw 2vw 2vw 4vw;
+    font-size: 2.9vw;
+    line-height: 1.2;
+    letter-spacing: 0px;
+  }
+
+  .section5_box_img {
+    margin-top: 3.52vw;
+    margin-left: 0.5vw;
+  }
+  .section5_box_img > img {
+    width: 25.5%;
+  }
+  .section5_box_img p {
+    font-size: 5vw;
+    font-weight: bold;
+    margin-left: 27.56vw;
+    padding-top: 9.2vw;
+  }
+  .section5_box_img .p1, .section5_box_img .p2, .section5_box_img .p3 {
+    margin-left: 27.56vw;
+    padding-top: 0.27vw;
+    font-size: 3vw;
     line-height: 1.2;
     letter-spacing: -0.15pt;
     text-transform: lowercase;
   }
 
-  .section5_box2, .section5_box3 {
-    display: none;
-    text-align: left;
+  .section5_box2_msg {
+    margin-top: 15.6%;
+  }
+  .section5_box3_msg {
+    margin-top: 3.75%;
   }
 
 }
+
+@media screen and (max-width: 479px) {
+  .section5_flex {
+    margin-top: 21px;
+  }
+  .section5_box_msg > p {
+    width: 90%;
+    padding: 22.2px 2vw 2vw 22.2px;
+    font-size: 13.32px;
+    line-height: 1.25;
+    letter-spacing: 0.5px;
+  }
+
+  .section5_box_img {
+    margin-top: 0vw;
+
+  }
+}
+@media screen and (max-width: 369px) {
+  .section5_flex {
+    margin-top: 40px;
+  }
+  .section5_box {
+    padding: 0;
+    width: 86.5%;
+    height: 100%;
+  }
+
+  .section5_box_msg > p {
+    width: 90%;
+    padding: 6vw 2vw 2vw 6vw;
+    font-size: 3.4vw;
+    line-height: 1.25;
+    letter-spacing: 0.5px;
+  }
+
+  .section5_box_img {
+    margin-top: 0vw;
+
+  }
+}  
+@media screen and (min-width: 480px)  and (max-width: 1023px) {
+  .section5 {
+      height: 640px;
+  }
+  .section5_h1 {
+      padding-top: 50px;
+  }
+  .section5_flex {
+      width: 480px;
+      height: 345px;
+      margin: 12px auto 0 auto;
+  }
+  .section5_box_msg > p {
+      font-size: 14px;
+      padding: 16px 10px 10px 22px ;
+  } 
+  .section5_box_img p, .section5_box_img .p1 {
+      padding-left: 0;
+      margin-left: 132px;
+  }
+  .section5_box_img p {
+      font-size: 24px;
+      padding-top: 31px;
+      letter-spacing: 0.1px;
+  }
+  .section5_box_img .p1 {
+      font-size: 14px;
+  }
+}
+
+@media screen and (min-width: 576px)  and (max-width: 1023px) {
+  .section5 {
+      height: 620px;
+  }
+
+  .section5_h1 > p {
+      font-size: 40px;
+      width: 95vw;
+      margin: 0 auto;
+  }
+}
+
