--- a/css/mobile/m_section6.css
+++ b/css/mobile/m_section6.css
@@ -1,17 +1,19 @@
-@media screen and (max-width: 600px) {
+
+
+@media screen and (max-width: 767px) {
 
     .section6 {
-      text-align: left;
-      background: rgb(234, 127, 140) url(../../Landing-assets/m_Screen_6_back.png) no-repeat;
-      width: 370px;
-      height: 380px;
-   }
+        height: 130vw;
+        flex-direction: column;        
+        justify-content: flex-start;
+        padding-bottom: 13vw;
+    }
 
-    .section6_box1, .section6_box2, .section6_box2, .section6_btn_msg, .section6_box2_email {
+    .section6_box1, .section6_box2, .section6_box2, .section6_box2_email {
         margin: 0;
     }
     .section6_box1, .section6_box2 {
-        width: 100%;    
+        width: 89.1vw;    
     }
    .section6_box1 {
         text-align: left;
@@ -21,43 +23,89 @@
    }
     .section6_box1 > p {
         word-wrap: break-word;
-        width: 340px;
+        width: 103%;
         font-size: 20px;
-        letter-spacing : 0.2px;
+        letter-spacing: 0.2px;
         line-height: 1.2;
         margin-left: 20px;
         padding-top: 38px;
     }
    
     .section6_box2 {
-/*      margin-top: 85px;
-        padding-left: 10px;*/
-    }
-    .section6_box2 {
-        width: 330px;
-        text-align: center;
-
+        margin: 0 auto;
     }
     .section6_btn, .section6_btn_box, .section6_btn_msg, .section6_box2_email {
         width: 100%;
-/*        margin-top: 50px;
-        padding-left: 0px;
-        margin-left: 150px;*/
+    }
+    .section6_box2 > p {
+        width: 92vw;
     }
     .section6_btn_msg{
-        margin-bottom: -33px;
-        margin-top: -38px;
-        padding-top: 10px;
+        margin-top : 25px;
+
     }
     .section6_box2_email > input::placeholder {
         padding-left: 25px;
     }
     .section6_box2_email {
-        width: 305px;
+        margin-top : 40px;
+        width: calc(89.1vw - 25px) ;
     }
     .section6_box2 > p {
+        white-space: nowrap;
+        padding-left: 0;
+        text-align: center;
+        font-size: 4vw;
+    }
+    .section6_popup {
+        width: 80vw;
+        height: 20vw;
+    }
+    
+}
 
-      padding-left: 0px;
+
+@media screen and (max-width: 576px) {
+   .section6_popup {
+
+        height: 120px;
+    }
+ }
+@media screen and (max-width: 380px) {
+    .section6 {
+        height: 444px;
+    }
+    .section6_box1 > p {
+        margin-left: 14px;
+    }
+    .section6_btn_msg{
+        margin-top : -56px;
+    }
+    .section6_box2 > p {
+        margin-left: -6px;
+    }
+
+
+}
+
+@media screen and (min-width: 400px) and (max-width: 767px) {
+    .section6 {
+        height: 520px;
+        padding-bottom: 5vw;
+    }
+    .section6_box1, .section6_box2, .section6_box2 > p {
+        width: 370px;
+    }
+    .section6_box1 {
+        padding-left: calc((100vw - 400px) / 2);
+
+    }
+    .section6_box2_email {
+        width: calc(370px - 25px) ;
+    }
+    .section6_box2 > p {
+        white-space: nowrap;
+        font-size: 14px;
     }
 
 }
