--- a/css/response/r_section1.css
+++ b/css/response/r_section1.css
@@ -21,3 +21,10 @@
         margin-top: 8vw;
     }
 }
+
+@media screen and (min-width: 767px) and (max-width: 1023) {
+    .section1_h1 {
+        line-height: 1;
+        letter-spacing: 0.1px;
+    }
+}
