--- a/css/response/r_section5.css
+++ b/css/response/r_section5.css
@@ -81,5 +81,6 @@
 	}
 
 }
-
+/*	При разрашении ниже 1024 пикс. секция переходит в слайдер с отображением одного элемента
+	Данные корректировки прописаны в m_section5 */
 
